fix: fiori 3 high contrast mode contrast ratios (#1789)
* fix: add alternate bg color for hcb hcw

* fix: avatar hcb background

* fix: add placeholder color

* fix: tabs hcb colors

* fix: radio hcb colors

* fix: checkbox hcb colors

* fix: avatar placeholder hcw color

* fix: tabs icon selected hcb color

* fix: avatar tileicon and placeholder hcw colors

* fix: tabs radio checkbox hcw

* chore: remove comments

* chore: remove avatar comment

* fix: avatar icon color

* fix: borders

* avatar themes

* fix: avatar hcw and hcb accent color-

--- a/src/radio.scss
+++ b/src/radio.scss
@@ -113,7 +113,7 @@ $block: #{$fd-namespace}-radio;
     content: "";
     position: absolute;
     border-radius: 50%;
-    background: var(--sapSelectedColor);
+    background: var(--fdRadio_Selected_Color);
   }
 
   // states
